[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/theme/fonts/montserrat-black-64.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/theme/main-theme.tres" type="Theme" id=2]
[ext_resource path="res://game/interface/GameOverScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/theme/fonts/montserrat-black-64-blue-outline.tres" type="DynamicFont" id=4]

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.8 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 269.0
margin_bottom = 397.0
custom_fonts/font = ExtResource( 4 )
text = "You glued: 20000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 168.0
margin_bottom = 296.0
text = "Best: 20000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 96.0
margin_right = 120.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 120, 32 )
text = "Glue Again"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="draw" from="." to="." method="_on_GameOverScreen_draw"]
[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
